# Comet

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  comet.txt  example.yaml  install  logfile  my_file.xml  upgrade
.internal/: index
.internal/package/: openssl  picojson  prizm  pugixml  rapidyaml
config/: device  fixture  mongo  psql  pwd  settings  tokens
core/debug/: get.cc  index_io.cc  install.cc  manifest.cc  purge.cc  uninstall.cc  update.cc
core/include/comet/: color.h  comet.h  comet_manager.h  commands.h  defs.h  index.h  io.h  json.h  manifest.h  package.h  semver.h  setup.h  utils.h
core/include/comet/command/: command.h  commands.h  get.h  install.h  list.h  purge.h  script.h  show.h  token.h  uninstall.h  update.h  update_token.h  upload.h
core/include/comet/util/: color.h  common.h  debug.h  helpers.h  io.h
core/src/: color.cc  comet_manager.cc  debug  index.cc  io.cc  main.cc  manifest.cc  package.cc  semver.cc  setup.cc
core/src/command/: command.cc  env.cc  install.cc  load.cc  show.cc  token.cc
core/src/util/: color.cc  helpers.cc  io.cc
core/test/: install-test.cc  mongo-test.cc  openssl-test.cc  picojson-test.cc  prizm-test.cc  psql-test.cc  pugixml-test.cc  rapidyaml-test.cc  setup-test.cc
manifest/: manifest.json
manifest/.get/: mongo-c  mongo-cxx  mongodb  mongodb-driver  openssl  picojson  postgres  pqxx  rapidyaml  ssl-dev
manifest/.get/prizm/: recent
manifest/config/: device
manifest/script/: apt-get  github-clone  github-recursive  github-release  os  script
